After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733419 - housekeeping: fix deletion of files in the trash
housekeeping: fix deletion of files in the trash
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: housekeeping
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-19 20:28 UTC by Cosimo Cecchi
Modified: 2014-07-23 03:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
housekeeping: fix deletion of files in the trash (2.23 KB, patch)
2014-07-19 20:28 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2014-07-19 20:28:32 UTC
See attached patch
Comment 1 Cosimo Cecchi 2014-07-19 20:28:35 UTC
Created attachment 281203 [details] [review]
housekeeping: fix deletion of files in the trash

Fixes a regression from dd2477bf74510237310d41974ba3e342e6c95da1 where
regular files would never get deleted from the trash.
Comment 2 Bastien Nocera 2014-07-21 10:43:16 UTC
Review of attachment 281203 [details] [review]:

++

Needs to go in the stable branches as well.
Comment 3 Cosimo Cecchi 2014-07-23 03:03:31 UTC
Attachment 281203 [details] pushed as 0f3b136 - housekeeping: fix deletion of files in the trash

Thanks, pushed wherever applies.