housekeeping: fix deletion of files in the trash

Fixes a regression from dd2477bf74510237310d41974ba3e342e6c95da1 where
regular files would never get deleted from the trash.

https://bugzilla.gnome.org/show_bug.cgi?id=733419